--- a/templates/historico.html
+++ b/templates/historico.html
@@ -49,7 +49,7 @@
         
        <section style="padding: 20px;">
         <h2>Histórico de Transações</h2>
-         <table border="1" width="100%" cellspacing="0" cellpadding="8">
+         <table class="historico-tabela">
             <thead>
                 <tr>
                     <th>Nome do Produto</th>
