atualizacao de categoria gestao pessoal para gastos pessoais atualizacao da aba cateoria para despesas e delete da aba despesa por redundancia

--- a/templates/despesas.html
+++ b/templates/despesas.html
@@ -138,13 +138,9 @@ cursor: pointer;
     <span class="nav-icon">📊</span>
     <span class="nav-label">Dashboard</span>
   </a>
-  <a href="despesas.html" class="nav-item">
+  <a href="despesas.html" class="nav-item active">
     <span class="nav-icon">💸</span>
     <span class="nav-label">Despesas</span>
-  </a>
-  <a href="categorias.html" class="nav-item active">
-    <span class="nav-icon">📁</span>
-    <span class="nav-label">Categorias</span>
   </a>
   <a href="historico.html" class="nav-item">
     <span class="nav-icon">📋</span>
@@ -169,7 +165,7 @@ cursor: pointer;
             <div class="categoria-item"><span class="icon green"><i class="fa-solid fa-heartbeat"></i></span> Saúde</div>
             <div class="categoria-item"><span class="icon black"><i class="fa-solid fa-car"></i></span> Transporte</div>
             <div class="categoria-item"><span class="icon red"><i class="fa-solid fa-futbol"></i></span> Lazer</div>
-            <div class="categoria-item"><span class="icon blue"><i class="fa-solid fa-user-gear"></i></span> Gestão Pessoal</div>
+            <div class="categoria-item"><span class="icon blue"><i class="fa-solid fa-user-gear"></i></span>Gastos Pessoais</div>
             <div class="categoria-item add"><span class="icon gray"><i class="fa-solid fa-plus"></i></span> Adicionar mais...</div>
         </div>
 
