Melhorias na tela de registro e login

--- a/templates/register.html
+++ b/templates/register.html
@@ -14,10 +14,8 @@
 
 </head>
 
-
+<body class="register">
   
-
-    
     <main class="register-main">
         <div class="register-box">
             <div class="register-header">
@@ -131,6 +129,5 @@
             // document.getElementById("registerForm").reset();
         });
     </script>
-
 </body>
 </html>
