--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,11 +30,11 @@
         <script src="../scripts/profile.js"></script>
 
         <div class="user-profile-contact">
-            <p>e-mail</p>
-            <p>Nº Telefone</p>
+            <p><strong>E-mail:</strong> <span id="user-email"></span></p>
+            <p><strong>Nº Telefone:</strong> <span id="user-telefone"></span></p>
         </div>
         <div class="user-profile-contact">
-            <p>Endereço</p>
+            <p><strong>Endereço:</strong> <span id="user-morada"></span></p>
         </div>
         <div class="help-center">
             <a href="mailto:help.center@gmail.com">
