--- a/templates/conta.html
+++ b/templates/conta.html
@@ -67,9 +67,12 @@
 
     <h3>Adicionar Saldo</h3>
     <div class="add-balance">
-      <input type="number" id="add-amount" placeholder="Valor a adicionar" min="0" step="0.01">
+      <div class="amount-container">
+        <input type="number" id="add-amount" placeholder="Valor a adicionar" min="0" step="0.01">
+      </div>
       <button id="add-balance-btn">Enviar</button>
     </div>
+
     <p id="add-message" style="color: green;"></p>
   </section>
 </main>
