--- a/templates/options.html
+++ b/templates/options.html
@@ -32,14 +32,7 @@
 
     <main class="options-main">
         <div class="user-change"><a href="profile.html">Perfil do Utilizador</a></div>
-        <div class="user-change"><a href="">Mudar e-mail</a> </div>
-        <div class="user-change"><a href="">Mudar Senha</a> </div>
-
-        <div class="policie"><a href="">Notificações</a></div>
-        <div class="policie"><a href="">Termos de Uso</a></div>
-        <div class="policie"><a href="">Privacidade</a></div>
         <div class="policie"><a href="">Sobre a App</a></div>
-
 
         <div class="user-logout">
 
@@ -52,7 +45,7 @@
         <script src="../scripts/api-config.js"></script>
         <script src="../scripts/auth.js"></script>
 
-        <div class="user-delete"><a href="">Eliminar usuário</a> </div>
+        <div class="user-delete"><a href="confirm_deactivate.html">Desativar conta</a> </div>
     </main>
 </body>
 </html>
