--- a/templates/options.html
+++ b/templates/options.html
@@ -32,20 +32,14 @@
 
     <main class="options-main">
         <div class="user-change"><a href="profile.html">Perfil do Utilizador</a></div>
-        <div class="policie"><a href="">Sobre a App</a></div>
 
         <div class="user-logout">
 
-            <a href="#" id="logoutBtn">
+            <a href="confirm_logout.html" id="logoutBtn">
                 <span class="logout-icon">⏻</span>
                 <span>Logout</span>
             </a>
         </div>
-
-        <script src="../scripts/api-config.js"></script>
-        <script src="../scripts/auth.js"></script>
-
-        <div class="user-delete"><a href="confirm_deactivate.html">Desativar conta</a> </div>
     </main>
 </body>
 </html>
